# RustAPI

./: .env  Cargo.toml
src/: alimentacion.rs  alimento.rs  alimento_unidad.rs  cerdo.rs  imagen.rs  lotes.rs  main.rs  tipo_alimento.rs  tipolote.rs  unidad.rs
